<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ongo_mainarea_background"
    android:gravity="center"
    android:orientation="vertical">

    <!-- About -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ongo_icon" />

    <TextView
        android:id="@+id/settings_about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/application_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/settings_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/ongo_settings_general_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/settings_about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/ongo_settings_general_copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <!-- ****About**** -->

</LinearLayout>